--- a/semantic_book_recommender_search_app/research/sbra_data_cleaning_and_transformation.ipynb
+++ b/semantic_book_recommender_search_app/research/sbra_data_cleaning_and_transformation.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Access and load data via kaggle hub api"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -35,6 +42,13 @@
    "source": [
     "path = kagglehub.dataset_download(\"dylanjcastillo/7k-books-with-metadata\")\n",
     "print(\"Path to dataset files:\", path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Pre-processing "
    ]
   },
   {
@@ -248,6 +262,13 @@
    ],
    "source": [
     "books_df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data preprocessing Phase 1::  Inpsecting null values"
    ]
   },
   {
@@ -522,6 +543,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Preprocessing phase 2:: Access numeric columns for some brief analysis"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -571,6 +599,13 @@
     "heatmap.set_title('correlation heatmap')\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Summary - no meaningful relationship\n"
    ]
   },
   {
@@ -656,6 +691,13 @@
    "source": [
     "# investigating our category column\n",
     "books_df_new['categories'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Preprocessing phase 3:: Word count and word processing"
    ]
   },
   {
