--- a/semantic_book_recommender_search_app/research/vector_search.ipynb
+++ b/semantic_book_recommender_search_app/research/vector_search.ipynb
@@ -1518,7 +1518,7 @@
         "# creating a function to fetch recommendations based on semantics\n",
         "\n",
         "def retrieve_semantic_recommendations(query:str, top_k: int = 10) -> pd.DataFrame:\n",
-        "    pass"
+        "    \"\"\""
       ]
     }
   ],
@@ -1530,7 +1530,8 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": ".venv",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
