added the book-sentiment-analysis notebook

--- a/semantic_book_recommender_search_app/research/book_category_classification.ipynb
+++ b/semantic_book_recommender_search_app/research/book_category_classification.ipynb
@@ -1147,8 +1147,25 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Fiction'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# obtain the index of the maximum score\n",
+    "max_index = np.argmax((pipe(sequence, labels)[0]['scores']))\n",
+    "# obtain the label itself\n",
+    "correct_label =  pipe(sequence, labels)[0]['labels'][max_index]\n",
+    "correct_label"
+   ]
   }
  ],
  "metadata": {
